# sakura

./: .gitignore  .gitmodules  .ignore  README.md  pyproject.toml  submodule_add.sh
outputs/diagram_stats/: rq1_compilation_stats.json  rq2_coverage_stats.json  rq3_structural_fidelity_stats.json  rq4_abstraction_sensitivity_stats.json  rq5_complexity_sensitivity_stats.json  rq6_tool_calls_stats.json
outputs/evaluation_stats/: gemini_cli_flash_eval.json  gemini_cli_pro_eval.json  nl2test_devstral_eval.json  nl2test_gemini_flash_eval.json  nl2test_gemini_pro_eval.json  nl2test_qwen3_eval.json
outputs/survey_sample/: survey_sample.json
outputs/tool_stats/: gemini_cli_flash_output_tool_stats.json  gemini_cli_pro_output_tool_stats.json  nl2test_devstral_output_tool_stats.json  nl2test_gemini_flash_output_tool_stats.json  nl2test_gemini_pro_output_tool_stats.json  nl2test_qwen3_output_tool_stats.json
resources/bucketed_tests/: summary.json
resources/filtered_bucketed_dataset_stats/: summary.json
resources/filtered_bucketed_tests/: summary.json
resources/filtered_tests/: summary.json
scripts/data/: create_spanning_subset.py  create_subset_dataset.py  create_survey_sample.py  generate_analysis.py  get_dataset_statistics.py  subset_test2nl_csv.py
scripts/diagrams/: colors.py  rq1_compilation.py  rq2_coverage.py  rq3_structural_fidelity.py  rq4_abstraction_sensitivity.py  (+2 more)
tests/: conftest.py  test_analysis.py  test_cli.py  test_composition.py  test_core_utilities.py  test_description.py  test_evaluation.py  test_execution_and_compilation.py  test_file_io.py  test_llm.py  test_localization.py  test_nl_decomposition.py  test_pipeline.py  test_preprocessing.py  test_supervisor.py  test_utils.py
(+474 files in other folders)
